Correction of imagem

--- a/week02/holygrail.html
+++ b/week02/holygrail.html
@@ -9,6 +9,8 @@
     </head>
     <body>
         <header>
+            <h1>A Holy Grail Layout Example</h1>
+        </header>    
             <nav>
                 <ul>
                     <li><a href="https://linkedin.com">LinkedIn</a></li>
@@ -30,11 +32,10 @@
                 </section>
             </main>
             <aside>
-                <img src="https://content.churchofjesuschrist.org/templesldsorg/bc/Temples/photo-galleries/campinas-brazil/800x1280/campinas-brazil-temple-fountain-1163382-wallpaper.jpg" width="200">
+                <img src="https://content.churchofjesuschrist.org/templesldsorg/bc/Temples/photo-galleries/campinas-brazil/800x1280/campinas-brazil-temple-fountain-1163382-wallpaper.jpg" alt="Campinas Brazil Temple" width="200">
             </aside>
             <footer>
                😃 Sarah Diaz Pereira
             </footer>
-        </header>
     </body>
 </html>
