--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width,initial-scale=1.0">
-        <title>Sarah Pereira | WDD 130</title>
+        <title>Sarah Diaz Pereira | WDD 130</title>
         <link rel="stylesheet" href="styles/styles.css">
     </head>
     <body>
@@ -15,7 +15,7 @@
             </nav>
         </header>
         <main>
-            <h1>Sarah Pereira | WDD 130</h1>
+            <h1>Sarah Diaz Pereira | WDD 130</h1>
             <img src="images/profile.jpg" alt="Hello, my name is Sarah Diaz Pereira" width="200">
             <p>Hello! My name is Sarah Diaz Pereira and I am from Valinhos, Brazil.</p>
             <p>I enjoy travel, read books, watch tv shows, play video games, make up and beauty products;</p>
