Enhancing My Course Home Page

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width,initial-scale=1.0">
         <title>Sarah Diaz Pereira | WDD 130</title>
+        <meta name="description" content="Sarah Diaz Pereira, Bachelor's Degree in Science of Software Development, Homepage from school work">
+        <meta name="author" content="Sarah Diaz Pereira">
         <link rel="stylesheet" href="styles/styles.css">
     </head>
     <body>
@@ -23,6 +25,14 @@
             <p>I am looking forward to learn French, Italian and German. I also have a bachelor degree in Business</p>
             <p>I've always dreamed of working in the technology field and I believe this course will open many doors</p>
         </main>
+            <aside>
+                <h2>Brazil</h2>
+                <img src="images/brazil.jpg" alt="Brazil landscape">
+                <p>Brazil is located in South America and is one of the largest countries in the world, both in area and population
+                    Its coastline is one of the longest in the world, there are no mountains in it's territory and it is 
+                    known as the country of football. Due to its horizontal amplitude, the Brazilian territory is located in four different 
+                    time zones, or time zones. This image that you see is from Rio de Janeiro one of the most famous states in Brazil</p>
+            </aside>   
         <footer>
             <p>&copy; 2024 😊 Sarah Diaz Pereira 😊 Valinhos, Brazil</p>
         </footer>
