Course Home Enhancement W03

--- a/index.html
+++ b/index.html
@@ -14,18 +14,27 @@
                 <a href="#">Home</a>
                 <a href="wwr/">Rafting Site</a>
                 <a href="wwr/site-plan-rafting.html">Rafting Site Plan</a>
+                <a href="https://www.linkedin.com/in/sarah-andressa-garcia-d%C3%ADaz-pereira-4a372154/">LinkedIn</a>
+                <a href="https://www.facebook.com/">Facebook</a>
             </nav>
         </header>
         <main>
             <h1>Sarah Diaz Pereira | WDD 130</h1>
             <img src="images/profile.jpg" alt="Hello, my name is Sarah Diaz Pereira" width="200">
-            <p>Hello! My name is Sarah Diaz Pereira and I am from Valinhos, Brazil.</p>
-            <p>I enjoy travel, read books, watch tv shows, play video games, make up and beauty products;</p>
-            <p>I love to learn new thing, specially new languagues. I already speak English and Spanish;</p>
-            <p>I am looking forward to learn French, Italian and German. I also have a bachelor degree in Business</p>
-            <p>I've always dreamed of working in the technology field and I believe this course will open many doors</p>
+            <p>Hello! My name is Sarah Diaz Pereira and I am from Valinhos, Brazil.
+            I enjoy travel, read books, watch tv shows, play video games, make up and beauty products;
+            I love to learn new things, specially new languagues. I already speak English and Spanish;
+            I am looking forward to learn French, Italian and German. I also have a bachelor degree in Business
+            and a Postgraduated degree in Management and Planning. I've always dreamed of working in the technology field,
+            and I believe this course will open many doors. I'm loving everything I'm learning, and I'm very happy to see my progress 
+            with HTML. It has been rewarding to see the results on my page each week!</p>
+        <ul class="box">
+            <li><a href="https://www.churchofjesuschrist.org/temples/details/san-diego-california-temple" target="_blank">San Diego California Temple</a></li>
+            <li><a href="https://www.churchofjesuschrist.org/temples/details/campinas-brazil-temple" target="_blank">Campinas Brazil Temple</a></li>
+            <li><a href="https://www.churchofjesuschrist.org/temples/details/salt-lake-temple" target="_blank">Salt Lake Temple</a></li>
+        </ul>
         </main>
-            <aside>
+            <aside class="box">
                 <h2>Brazil</h2>
                 <img src="images/brazil.jpg" alt="Brazil landscape">
                 <p>Brazil is located in South America and is one of the largest countries in the world, both in area and population
