--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
                 <a href="https://www.facebook.com/">Facebook</a>
             </nav>
         </header>
+        <div class="grid">
         <main>
             <h1>Sarah Diaz Pereira | WDD 130</h1>
             <img src="images/profile.jpg" alt="Hello, my name is Sarah Diaz Pereira" width="200">
@@ -42,9 +43,10 @@
                     known as the country of football. Due to its horizontal amplitude, the Brazilian territory is located in four different 
                     time zones, or time zones. This image that you see is from Rio de Janeiro one of the most famous states in Brazil</p>
             </aside>   
+        </div>
         <footer>
             <p>&copy; 2024 😊 Sarah Diaz Pereira 😊 Valinhos, Brazil</p>
         </footer>
     </body>
-    <!--Last update May 8th-->
+    <!--Last update May 31th-->
 </html>
