Corret duplicate text

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <p>Brazil is located in South America and is one of the largest countries in the world, both in area and population
                     Its coastline is one of the longest in the world, there are no mountains in it's territory and it is 
                     known as the country of football. Due to its horizontal amplitude, the Brazilian territory is located in four different 
-                    time zones, or time zones. This image that you see is from Rio de Janeiro one of the most famous states in Brazil</p>
+                    time zones. This image that you see is from Rio de Janeiro one of the most famous states in Brazil</p>
             </aside>   
         </div>
         <footer>
