--- a/wwr/about.html
+++ b/wwr/about.html
@@ -25,38 +25,38 @@
                 <h1>Rafting Travel</h1>
                 <article>
                     <img src="images/client1.jpg" alt="Happy Clients">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad nesciunt architecto iste velit quaerat, doloribus vel praesentium cupiditate repudiandae minima! Expedita iure sunt rem sequi ducimus ad corporis dolorum voluptatum.</p>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Numquam doloremque eius autem, deleniti consequuntur necessitatibus commodi, doloribus vero ullam at similique voluptatibus, saepe ab sit eveniet incidunt? Similique excepturi beatae exercitationem optio rerum voluptates aut quae obcaecati minima, eum itaque.</p>
                 </article>
             </div>
             
             <section class="history">
                 <h2>History</h2>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Deserunt ratione labore adipisci quam inventore, ex laudantium vero accusamus placeat maxime. Dicta quis dolore exercitationem facilis aut? Nobis velit ea culpa odio iste sit, pariatur voluptatem fugit esse reprehenderit. Vel nemo ex nisi, dolor ipsa soluta?</p>
-                </section>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Minima maxime animi natus itaque obcaecati id perspiciatis ex illum! Nulla libero dicta doloribus harum voluptates corporis natus voluptatibus similique voluptate tempore?</p>
+                    <img src="images/history.jpg" alt="Our history">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit minima fugiat et laborum illum, voluptatum architecto suscipit iusto ullam saepe similique perspiciatis cum ratione minus.</p>
+            </section>
                 <section class="adventure">
                 <h2>Adventure Awaits You!</h2>
-                <div class="gallery container">
                     <figure>
                         <img src="images/image1.jpg" alt="Rafting Adventure">
-                        <figcaption>Lorem, ipsum.</figcaption>
+                        <figcaption>Adrenaline rush.</figcaption>
                     </figure>
                     <figure>
                         <img src="images/image2.jpg" alt="Rafting Adventure">
-                        <figcaption>Lorem, ipsum.</figcaption>
+                        <figcaption>Incredible landscapes</figcaption>
                     </figure>
                     <figure>
                         <img src="images/image3.jpg" alt="Rafting Adventure">
-                        <figcaption>Lorem, ipsum.</figcaption>
+                        <figcaption>Magic Places</figcaption>
                     </figure>
                     <figure>    
                         <img src="images/image4.jpg" alt="Rafting Adventure">
-                        <figcaption>Lorem, ipsum.</figcaption>
+                        <figcaption>Breathtaking rapids</figcaption>
                     </figure>
                     <figure>
                         <img src="images/image5.jpg" alt="Rafting Adventure">
-                        <figcaption>Lorem, ipsum.</figcaption>
-                    </figure> 
-                </div>                  
+                        <figcaption>Adventures you won't forget</figcaption>
+                    </figure>               
             </section>
         </main>
     <footer>
